--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>AuraNodes — VIM PLAN</title>
+  <title>AuraNodes VPS Hosting — VIM PLAN</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/yourkit.js" crossorigin="anonymous"></script>
   <style>
@@ -134,9 +134,9 @@
   <div class="container">
     <header>
       <div class="brand">
-        <div class="logo">V</div>
+        <div class="logo">A</div>
         <div>
-          <h1>Your VPS Hosting</h1>
+          <h1>AuraNodes VPS Hosting</h1>
           <p>Fast — Powerful — Affordable</p>
         </div>
       </div>
@@ -211,7 +211,7 @@
     </section>
 
     <div class="footer">
-      © <span id="yr"></span> Your VPS Hosting • Built with ❤️ — Deploy on GitHub Pages or Vercel
+      © <span id="yr"></span> AuraNodes VPS Hosting • Built with ❤️ 
     </div>
   </div>
 
@@ -219,7 +219,7 @@
     document.getElementById('yr').innerText = new Date().getFullYear();
 
     const DISCORD_INVITE = "https://discord.gg/AYat4hbyPR";
-    const GITHUB_URL = "https://github.com/your-repo"; // change to your repo
+    const GITHUB_URL = "https://github.com/aadi755/"; // change to your repo
 
     document.getElementById('buyBtn').addEventListener('click', () => {
       window.open(DISCORD_INVITE, "_blank");
