--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     </section>
 
     <div class="footer">
-      © <span id="yr"></span> AuraNodes VPS Hosting • Built with ❤️ 
+      © <span id="yr"></span> AuraNodes VPS Hosting • Built with ❤️  ©  All Rights Reserved
     </div>
   </div>
 
