--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <small style="color:var(--muted)">Perfect for high-demand projects — limited slots.</small>
           </div>
           <div style="text-align:right">
-            <div style="font-size:12px;color:var(--muted)">SKU</div>
+            <div style="font-size:12px;color:var(--muted)">SG</div>
             <div style="font-weight:800">VIM-1</div>
           </div>
         </div>
@@ -201,7 +201,7 @@
             <small style="color:var(--muted)">Best value for lifetime usage — ultimate performance.</small>
           </div>
           <div style="text-align:right">
-            <div style="font-size:12px;color:var(--muted)">SKU</div>
+            <div style="font-size:12px;color:var(--muted)">SG</div>
             <div style="font-weight:800">MASTER-1</div>
           </div>
         </div>
