--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
           </div>
         </div>
         <div class="specs">
-          <div class="spec"><div>💻  RAM</div><div>64 GB</div></div>
-          <div class="spec"><div>🛩️ CPU</div><div>AMD Ryzen 9 7900 </div></div>
+          <div class="spec"><div>💻  RAM</div><div>128 GB</div></div>
+          <div class="spec"><div>🛩️ CPU</div><div>Intel Xeon 32 core </div></div>
           <div class="spec"><div>💾 Storage</div><div>313.91 GB SSD</div></div>
           <div class="spec"><div>💵 Price</div><div>₹160</div></div>
           <div class="spec"><div>🔞 Duration</div><div>Lifetime</div></div>
